# AUTOENCODE

./: AUTOENCODE_ME.md  ESCALATOR.md  README.md  autoencode.toml
npx-installer/: index.js  package.json
uvx-installer/: install_autoencode.py  pyproject.toml
